--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -70,44 +70,60 @@
   <ion-item (click)="choixProduitModal()">
     <ion-label color='primary'>Ajouter un produit</ion-label>
   </ion-item>
-  
   <ion-card *ngFor="let commandeProduit of commandesProduits">
-  <ion-item-sliding>
-    
-      <ion-item >
-        <ion-label>{{commandeProduit.produitNom}}</ion-label>
-      <ion-note>
-        <ion-label position="floating">Quantité</ion-label>
-        <ion-textarea [(ngModel)]='commandeProduit.quantite' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit)">
-        </ion-textarea>
-      </ion-note>
-      <ion-note slot="end">
-        <ion-label position="floating">Prix</ion-label>
-        <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit)">
-        </ion-textarea>
-      </ion-note>
-    </ion-item>
-
-    <ion-item-options side="end">
-      <ion-item-option color="danger" (click)="deleteProduit(commandeProduit)" >
-        <ion-icon name="trash" slot="icon-only"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-    
-  </ion-item-sliding>
-</ion-card>
-  
-  
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label slot="start">{{commandeProduit.produitNom}}</ion-label>
+        <ion-note slot="start">
+          <ion-label position="floating">Quantité</ion-label>
+          <ion-textarea [(ngModel)]='commandeProduit.quantite' type="number" inputmode="number"
+            (change)="quantitePrixEstChange(commandeProduit)">
+          </ion-textarea>
+        </ion-note>
+        <ion-note slot="end">
+          <ion-label position="floating">Prix</ion-label>
+          <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number"
+            (change)="quantitePrixEstChange(commandeProduit)">
+          </ion-textarea>
+        </ion-note>
+        <ion-note slot="end">
+          <ion-label position="floating">Réduction en %</ion-label>
+          <ion-textarea [(ngModel)]='commandeProduit.pourcentageProduit' type="number" inputmode="number"
+            (change)="quantitePrixEstChange(commandeProduit)">
+          </ion-textarea>
+        </ion-note>
+        <ion-note slot="end">
+          <ion-label position="floating">Total HTVA</ion-label>
+          <p></p>
+          <ion-label>{{commandeProduit.prix*commandeProduit.quantite-((commandeProduit.prix*commandeProduit.quantite)*commandeProduit.pourcentageProduit/100)}}</ion-label>
+        </ion-note>
+        <ion-note slot="end">
+          <ion-label position="floating">TVA</ion-label>
+          <p></p>
+          <ion-label>{{commandeProduit.TVAProduit}} %</ion-label>
+        </ion-note>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="deleteProduit(commandeProduit)">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-card>
   <ion-item>
-    <ion-label>Total commande : {{total}} €</ion-label>    
+    <ion-label>Total commande HTVA : {{total}} €</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Total commande TVAC : {{totalTVA}} €</ion-label>
   </ion-item>
   <ion-item>
     <ion-label>Date de la commande : </ion-label>
-    <ion-label>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-label>    
+    <ion-label>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-label>
   </ion-item>
   <ion-item>
     <ion-label>Date de livraison : </ion-label>
-    <ion-datetime [(ngModel)]='commande.dateLivraison'  max="2099-12-31" displayFormat="DD MMMM YYYY" placeholder="Choisissez une date de livraison"></ion-datetime>
+    <ion-datetime [(ngModel)]='commande.dateLivraison' max="2099-12-31" displayFormat="DD MMMM YYYY"
+      placeholder="Choisissez une date de livraison"></ion-datetime>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Notes</ion-label>
