--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -193,6 +193,12 @@
     </ion-item-sliding>
   </ion-card>
   <ion-item>
+    <ion-label position="floating">Réduction sur le total</ion-label>
+    <ion-textarea [(ngModel)]='commande.pourcentageTotal' type="number" inputmode="number"
+      (change)="calculPrix(commande)">
+    </ion-textarea>
+  </ion-item>
+  <ion-item>
     <ion-label>Total commande HTVA : {{total}} €</ion-label>
   </ion-item>
   <ion-item>
