correction format nombre > affichageCommande

--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -174,7 +174,7 @@
           <ion-label position="floating">Total HTVA</ion-label>
           <p></p>
           <ion-label>
-            {{(commandeProduit.prix*commandeProduit.quantite-((commandeProduit.prix*commandeProduit.quantite)*commandeProduit.pourcentageProduit/100))).toFixed(2)}}
+            {{(commandeProduit.prix*commandeProduit.quantite-((commandeProduit.prix*commandeProduit.quantite)*commandeProduit.pourcentageProduit/100)).toFixed(2)}}
           </ion-label>
         </ion-note>
         <ion-note slot="end">
