--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -96,7 +96,7 @@
           <ion-label position="floating">Total HTVA</ion-label>
           <p></p>
           <ion-label>
-            {{(commandeProduit.prix*commandeProduit.quantite-((commandeProduit.prix*commandeProduit.quantite)*commandeProduit.pourcentageProduit/100)).toFixed(2)}}
+            {{((commandeProduit.prix*commandeProduit.quantite-((commandeProduit.prix*commandeProduit.quantite)*commandeProduit.pourcentageProduit/100)).toFixed(2)).replace('.',',')}}
           </ion-label>
         </ion-note>
         <ion-note slot="end">
@@ -121,10 +121,10 @@
   </ion-item>
 
   <ion-item>
-    <ion-label>Total commande HTVA : {{total.toFixed(2)}} €</ion-label>
+    <ion-label>Total commande HTVA : {{(total.toFixed(2)).replace('.',',')}} €</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Total commande TVAC : {{totalTVA.toFixed(2)}} €</ion-label>
+    <ion-label>Total commande TVAC : {{(totalTVA.toFixed(2)).replace('.',',')}} €</ion-label>
   </ion-item>
   <ion-item>
     <ion-label>Date de la commande : </ion-label>
