--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -78,6 +78,14 @@
     <ion-input [(ngModel)]='client.email' type="email" inputmode="email"></ion-input>
   </ion-item>
   <ion-item>
+    <ion-label position="floating">Page web</ion-label>
+    <ion-input [(ngModel)]='client.siteWeb'></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Page LinkedIn</ion-label>
+    <ion-input [(ngModel)]='client.linkedIn'></ion-input>
+  </ion-item>
+  <ion-item>
     <ion-label position="floating">Notes</ion-label>
     <ion-textarea [(ngModel)]='client.notes' type="text" inputmode="text"></ion-textarea>
   </ion-item>
