--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -61,6 +61,7 @@
     <ion-item>
       <ion-label position="floating">Numéro de téléphone</ion-label>
       <ion-textarea formControlName="numeroTelephoneForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+      <ion-fab-button *ngIf="client.numeroTelephone" slot="end" (click)="appeler(client.numeroTelephone)"><ion-icon name="call"></ion-icon></ion-fab-button>  
     </ion-item>
     <ion-item>
       <ion-label position="floating">Numéro de GSM</ion-label>
