--- a/src/app/tabs/produits/produits.page.html
+++ b/src/app/tabs/produits/produits.page.html
@@ -8,7 +8,7 @@
   </ion-toolbar>
 
   <ion-toolbar>
-    <ion-item >
+    <ion-item slot='start'>
       <ion-searchbar animated placeholder="Recherche" [value]='test' (ionChange)="rechercheProduit($event)"></ion-searchbar>
     </ion-item>
 
