Affichage des commandes par client

--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -37,6 +37,7 @@
     <ion-item>
       <ion-label position="floating">Localité</ion-label>
       <ion-textarea formControlName="localiteForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+      <!-- <ion-fab-button *ngIf="client.localite" slot="end" (click)="lancerNavigation(client.localite)"><ion-icon name="navigate"></ion-icon></ion-fab-button> -->
     </ion-item>
     <ion-item>
       <ion-label position="floating">Code postal</ion-label>
