--- a/src/app/modals/modal-produit/modal-produit.page.html
+++ b/src/app/modals/modal-produit/modal-produit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title id="titre">modal-produit</ion-title>
+    <ion-title id="titre">Liste de produits</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="closeModal()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
