--- a/src/app/modals/modal-commandes/modal-commandes.page.html
+++ b/src/app/modals/modal-commandes/modal-commandes.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Liste des commandes de {{commande.nomClient}}</ion-title>
+    <ion-title>Liste des commandes de {{pseudoClient}}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
