--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -9,7 +9,9 @@
 <ion-content>
   <div class="disposition" >
     <img [src]="image" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/1200px-Circle-icons-profile.svg.png';" alt=""/>
+    <ion-fab-button slot="end" (click)="choixCommandesModal(client.key, client.pseudo)"><ion-icon name="clipboard"></ion-icon></ion-fab-button>  
   </div>
+
   <ion-button (click)="changerPhoto('galerie')" color="tertiary" expand="block"(click)="imageChange=true; estChange=true">
     <ion-icon name="image" slot="start"></ion-icon>
     Changer l'image
