Ajout codeProduitFournisseurForm > produit model

--- a/src/app/ajouter-produit/ajouter-produit.page.html
+++ b/src/app/ajouter-produit/ajouter-produit.page.html
@@ -26,6 +26,10 @@
     <ion-input [(ngModel)]="produit.codeProduit" type="string"></ion-input>
   </ion-item>
   <ion-item>
+    <ion-label position="floating">Code produit fournisseur</ion-label>
+    <ion-input [(ngModel)]="produit.codeProduitFournisseur" type="string"></ion-input>
+  </ion-item>
+  <ion-item>
     <ion-label position="floating">Nom</ion-label>
     <ion-input [(ngModel)]="produit.nom" type="string"></ion-input>
   </ion-item>
