--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 <ion-content>
   <div class="disposition" >
-    <img [src]="image" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/1200px-Circle-icons-profile.svg.png';" alt=""/>
+    <img [src]="image" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Factory.svg/1174px-Factory.svg.png';" alt=""/>
     <ion-fab-button slot="end" (click)="choixCommandesModal(client.key, client.pseudo)"><ion-icon name="clipboard"></ion-icon></ion-fab-button>  
   </div>
 
@@ -26,6 +26,8 @@
       <ion-textarea formControlName="pseudoForm" type="text" inputmode="text" (change)="estChange=true">
       </ion-textarea>
     </ion-item>
+  <ion-title id='adresse'>Adresse du siège social</ion-title>
+  <ion-item>
     <ion-item>
       <ion-label position="floating">Pays</ion-label>
       <ion-textarea formControlName="paysForm" type="text" inputmode="text" (change)="estChange=true">
@@ -36,6 +38,9 @@
       <ion-textarea formControlName="provinceForm" type="text" inputmode="text" (change)="estChange=true">
       </ion-textarea>
     </ion-item>
+  </ion-item>
+      <ion-item>
+
     <ion-item>
       <ion-label position="floating">Localité</ion-label>
       <ion-textarea formControlName="localiteForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
@@ -45,6 +50,9 @@
       <ion-label position="floating">Code postal</ion-label>
       <ion-textarea formControlName="codePostalForm" type="number" inputmode="number" (change)="estChange=true"></ion-textarea>
     </ion-item>
+  </ion-item>
+  <ion-item>
+
     <ion-item>
       <ion-label position="floating">Rue</ion-label>
       <ion-textarea formControlName="rueForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
@@ -57,6 +65,8 @@
       <ion-label position="floating">Boite</ion-label>
       <ion-textarea formControlName="boiteForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
     </ion-item>
+  </ion-item>
+
     <ion-item>
       <ion-label position="floating">Numéro de TVA</ion-label>
       <ion-textarea formControlName="numeroTVAForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
