--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -30,7 +30,7 @@
     <ion-input [(ngModel)]='client.pseudo' type="text" inputmode="text"></ion-input>
   </ion-item>
 
-  <ion-title>Adresse du siège social</ion-title>
+  <ion-title id='adresse'>Adresse du siège social</ion-title>
   <ion-item>
     <ion-item>
       <ion-label position="floating">Pays</ion-label>
