--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -34,56 +34,56 @@
   <ion-item>
     <ion-item>
       <ion-label position="floating">Pays</ion-label>
-      <ion-input [(ngModel)]='client.pays' type="text" inputmode="text"></ion-input>
+      <ion-input [(ngModel)]='coordonnees.pays' type="text" inputmode="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Province</ion-label>
-      <ion-input [(ngModel)]='client.province' type="text" inputmode="text"></ion-input>
+      <ion-input [(ngModel)]='coordonnees.province' type="text" inputmode="text"></ion-input>
     </ion-item>
   </ion-item>
   <ion-item>
     <ion-item>
       <ion-label position="floating">Code postal</ion-label>
-      <ion-input [(ngModel)]='client.codePostal' type="number" inputmode="number"></ion-input>
+      <ion-input [(ngModel)]='coordonnees.codePostal' type="number" inputmode="number"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Localité</ion-label>
-      <ion-input [(ngModel)]='client.localite' type="text" inputmode="text"></ion-input>
+      <ion-input [(ngModel)]='coordonnees.localite' type="text" inputmode="text"></ion-input>
     </ion-item>
   </ion-item>
   <ion-item>
     <ion-item>
       <ion-label position="floating">Rue</ion-label>
-      <ion-input [(ngModel)]='client.rue' type="text" inputmode="text"></ion-input>
+      <ion-input [(ngModel)]='coordonnees.rue' type="text" inputmode="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Numéro</ion-label>
-      <ion-input [(ngModel)]='client.numero' type="number" inputmode="number"></ion-input>
+      <ion-input [(ngModel)]='coordonnees.numero' type="number" inputmode="number"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Boite</ion-label>
-      <ion-input [(ngModel)]='client.boite' type="text" inputmode="text"></ion-input>
+      <ion-input [(ngModel)]='coordonnees.boite' type="text" inputmode="text"></ion-input>
     </ion-item>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Numéro de TVA</ion-label>
-    <ion-input [(ngModel)]='client.numeroTVA' type="text" inputmode="text"></ion-input>
+    <ion-input [(ngModel)]='coordonnees.numeroTVA' type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Numéo de téléphone</ion-label>
-    <ion-input [(ngModel)]='client.numeroTelephone' type="text" inputmode="text"></ion-input>
+    <ion-input [(ngModel)]='coordonnees.numeroTelephone' type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Numéo de GSM</ion-label>
-    <ion-input [(ngModel)]='client.numeroGSM' type="text" inputmode="text"></ion-input>
+    <ion-input [(ngModel)]='coordonnees.numeroGSM' type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Numéo de fax</ion-label>
-    <ion-input [(ngModel)]='client.numeroFax' type="text" inputmode="text"></ion-input>
+    <ion-input [(ngModel)]='coordonnees.numeroFax' type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Adresse email</ion-label>
-    <ion-input [(ngModel)]='client.email' type="email" inputmode="email"></ion-input>
+    <ion-input [(ngModel)]='coordonnees.email' type="email" inputmode="email"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Page web</ion-label>
